@@ -679,7 +679,7 @@ html5 = {
     'dopf;': '\U0001d555',
     'Dot;': '\xa8',
     'dot;': '\u02d9',
-    'DotDot;': '\u25cc\u20dc',
+    'DotDot;': '\u20dc',
     'doteq;': '\u2250',
     'doteqdot;': '\u2251',
     'DotEqual;': '\u2250',
@@ -706,7 +706,7 @@ html5 = {
     'downarrow;': '\u2193',
     'DownArrowBar;': '\u2913',
     'DownArrowUpArrow;': '\u21f5',
-    'DownBreve;': '\u25cc\u0311',
+    'DownBreve;': '\u0311',
     'downdownarrows;': '\u21ca',
     'downharpoonleft;': '\u21c3',
     'downharpoonright;': '\u21c2',
@@ -1130,9 +1130,9 @@ html5 = {
     'Lambda;': '\u039b',
     'lambda;': '\u03bb',
     'Lang;': '\u27ea',
-    'lang;': '\u2329',
+    'lang;': '\u27e8',
     'langd;': '\u2991',
-    'langle;': '\u2329',
+    'langle;': '\u27e8',
     'lap;': '\u2a85',
     'Laplacetrf;': '\u2112',
     'laquo': '\xab',
@@ -1177,7 +1177,7 @@ html5 = {
     'ldsh;': '\u21b2',
     'lE;': '\u2266',
     'le;': '\u2264',
-    'LeftAngleBracket;': '\u2329',
+    'LeftAngleBracket;': '\u27e8',
     'LeftArrow;': '\u2190',
     'Leftarrow;': '\u21d0',
     'leftarrow;': '\u2190',
@@ -1427,7 +1427,7 @@ html5 = {
     'nesim;': '\u2242\u0338',
     'NestedGreaterGreater;': '\u226b',
     'NestedLessLess;': '\u226a',
-    'NewLine;': '\u240a',
+    'NewLine;': '\n',
     'nexist;': '\u2204',
     'nexists;': '\u2204',
     'Nfr;': '\U0001d511',
@@ -1826,10 +1826,10 @@ html5 = {
     'radic;': '\u221a',
     'raemptyv;': '\u29b3',
     'Rang;': '\u27eb',
-    'rang;': '\u232a',
+    'rang;': '\u27e9',
     'rangd;': '\u2992',
     'range;': '\u29a5',
-    'rangle;': '\u232a',
+    'rangle;': '\u27e9',
     'raquo': '\xbb',
     'raquo;': '\xbb',
     'Rarr;': '\u21a0',
@@ -1897,7 +1897,7 @@ html5 = {
     'Rho;': '\u03a1',
     'rho;': '\u03c1',
     'rhov;': '\u03f1',
-    'RightAngleBracket;': '\u232a',
+    'RightAngleBracket;': '\u27e9',
     'RightArrow;': '\u2192',
     'Rightarrow;': '\u21d2',
     'rightarrow;': '\u2192',
@@ -2166,7 +2166,7 @@ html5 = {
     'swnwar;': '\u292a',
     'szlig': '\xdf',
     'szlig;': '\xdf',
-    'Tab;': '\u2409',
+    'Tab;': '\t',
     'target;': '\u2316',
     'Tau;': '\u03a4',
     'tau;': '\u03c4',
@@ -2177,7 +2177,7 @@ html5 = {
     'tcedil;': '\u0163',
     'Tcy;': '\u0422',
     'tcy;': '\u0442',
-    'tdot;': '\u25cc\u20db',
+    'tdot;': '\u20db',
     'telrec;': '\u2315',
     'Tfr;': '\U0001d517',
     'tfr;': '\U0001d531',
@@ -2231,7 +2231,7 @@ html5 = {
     'tridot;': '\u25ec',
     'trie;': '\u225c',
     'triminus;': '\u2a3a',
-    'TripleDot;': '\u25cc\u20db',
+    'TripleDot;': '\u20db',
     'triplus;': '\u2a39',
     'trisb;': '\u29cd',
     'tritime;': '\u2a3b',
